--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.16",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "tailwindcss": "^4.1.5"
   }
 }
