--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - main # TODO: Change for master
   workflow_dispatch:
 
 
@@ -24,7 +24,9 @@ jobs:
         run: npm install --legacy-peer-deps
 
       - name: Build project
-        run: npm run build
+        run: npm run build -- --max-warnings=0
+        env:
+          CI: false
 
       - name: Log in to DockerHub
         uses: docker/login-action@v3
